<?xml version="1.0" encoding="utf-8"?>

<!-- 
/*
 *  Program : BlueToothTest
 *  About :   Android application proof of concept for triggering
 *            a camera remotely
 *  File :    strings.xml
 *  Purpose : Defines all english text used within the application
 *   
 *  Copyright (C) 2011  Geoff Kerr, Digital Systems Technologies
 *  
 *  http://digisystech.com
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->  

<resources>
    <string name="app_name_text">BlueToothTest</string>
    
    <string name="connect_title_text">Bluetooth not Connected</string>
    <string name="connect_button_label">Connect</string>
    
    <string name="ready_title_text">Ready to Run</string>
    <string name="trigger_button_label">Trigger</string>
    <string name="configuration_button_label">Settings</string>
    <string name="about_button_label">About</string>
    <string name="exit_button_label">Exit</string>
    
    <string name="running_title_text">Running</string>
    <string name="running_body_text">\
       This is a place-holder for a status output.</string>
    <string name="cancel_button_exit">Cancel</string>
    <string name="about_title_text">About Bluetooth Trigger</string>
    <string name="about_body_text">\
       This application was written by
       Geoff Kerr as a test application
       for proving that the using bluetooth
       to trigger a camera can work.</string>
    <string name="web_link_title">please visit my website</string>

    <string name="no_connect_body_text">\
       Cannot establish a proper connection with the
       target triggering system.  Please try again.</string>
    <string name="no_connect_title_text">ATTENTION!</string>

</resources>
