<?xml version="1.0" encoding="utf-8"?>

<!-- 
/*
 *  Program : BlueToothTest
 *  About :   Android application proof of concept for triggering
 *            a camera remotely
 *  File :    main.xml
 *  Purpose : Defines the way that the main menu view is formatted
 *   
 *  Copyright (C) 2011  Geoff Kerr, Digital Systems Technologies
 *  
 *  http://digisystech.com
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->  

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="30dip"
>
	<LinearLayout
	  android:orientation="vertical"
	  android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:layout_gravity="center"
	>
	<TextView  
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/ready_title_text"
      android:layout_gravity="center"
      android:layout_marginBottom="25dip"
      android:textSize="24.5sp"
	/>
		<Button
			android:id="@+id/trigger_button"  
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:text="@string/trigger_button_label"
		/>
		<Button
			android:id="@+id/configuration_button"  
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:text="@string/configuration_button_label"
		/>
		<Button
			android:id="@+id/about_button"  
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:text="@string/about_button_label"
		/>
		<Button
			android:id="@+id/exit_button"  
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:text="@string/exit_button_label"
		/>
   </LinearLayout>
</LinearLayout>
